[tool.poetry]
name = "graphene_pydantic"
version = "0.3.0"
description = "Graphene Pydantic integration"
readme = "README.md"
repository = "https://github.com/graphql-python/graphene-pydantic"
authors = [
  "Rami Chowdhury <rami@upside.com>"
]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: PyPy",
]
keywords = ["api", "graphql", "protocol", "rest", "relay", "graphene", "pydantic", "model"]

[tool.poetry.dependencies]
python = "^3.7"
# To keep things simple, we only support newer versions of Graphene & Pydantic
graphene = ">=2.1.8"
pydantic = [
    { version = ">=1.0,<2.0", python = ">3.6,<3.10" },
    { version = ">=1.9,<2.0", python = ">=3.10" }
]

[tool.poetry.dev-dependencies]
pytest = "~6.2"
pytest-cov = "~2.7.1"
tox = "~3.12.0"  # sync with tox.ini
mypy = "0.901"
black = "21.12b0"
pre-commit = "~1.17.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
