[tool.poetry]
name = "graphene_pydantic"
version = "0.4.1"
description = "Graphene Pydantic integration"
readme = "README.md"
repository = "https://github.com/graphql-python/graphene-pydantic"
authors = [
  "Rami Chowdhury <rami.chowdhury@gmail.com>",
  "Dan Riggs <danielriggs@gmail.com>",
]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: PyPy",
]
keywords = ["api", "graphql", "protocol", "rest", "relay", "graphene", "pydantic", "model"]

[tool.poetry.dependencies]
python = "^3.7"
graphene = ">=3.0"
pydantic = [
    { version = ">=1.0,<2.0", python = ">3.6,<3.12" },
    { version = ">=1.9,<2.0", python = ">=3.10" }
]

[tool.poetry.group.dev.dependencies]
pytest = "~6.2"
pytest-cov = "~2.7.1"
mypy = "^1.4.1"
black = "23.3"
pre-commit = "^2.9.2"
nox = "^2023.4.22"

[build-system]
requires = ["poetry>=1.5"]
build-backend = "poetry.masonry.api"
